Made client and server improvs
