# server/swagger.json
@@ -40,85 +40,168 @@
                         }
                     },
                     "500": {
-                        "description": "Server Error in fetching memes",
-                        "schema": {
-                            "type": "json",
-                            "items": {
-                                "properties": {
-                                    "message": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
+                        "description": "Server Error in fetching memes"
                     }
                 }
             },
             "post": {
                 "summary": "API to post a meme",
                 "description": "Posts a meme",
-                "requestBody": {
-                    "content": "application/json",
-                    "schema": {
-                        
-                    }
-                },
                 "responses": {
-                    "200": {
-                        "description": "Posts a meme",
+                    "201": {
+                        "description": "Successfully posted the meme",
                         "schema": {
-                            "type": "json",
-                            "items": {
+                            "type": "object",
                                 "properties": {
                                     "id": {
                                         "type": "string"
                                     }
                                 }
-                            }
                         }
                     },
                     "409": {
-                        "description": "Posted Duplicate meme",
-                        "schema": {
-                            "type": "json",
-                            "items": {
-                                "properties": {
-                                    "message": {
-                                        "type": "string"
-                                    }
-                                }
-                            }
-                        }
+                        "description": "Posted Duplicate meme"
                     },
                     "400": {
-                        "description": "Server Error in fetching memes",
+                        "description": "Invalid request"
+                    },
+                    "500": {
+                        "description": "Server Error in fetching memes"
+                    }
+                }
+            }
+        },
+        "/memes/{id}": {
+            "get": {
+                "summary": "Get the meme post identified by the unique id",
+                "description": "Get the meme post identified by the unique id",
+                "responses": {
+                    "200": {
+                        "description": "Post",
                         "schema": {
-                            "type": "json",
-                            "items": {
+                            "type": "object",
                                 "properties": {
-                                    "message": {
+                                    "id": {
+                                        "type": "string"
+                                    },
+                                    "name": {
+                                        "type": "string"
+                                    },
+                                    "url": {
+                                        "type": "string"
+                                    },
+                                    "caption": {
                                         "type": "string"
                                     }
-                                }
                             }
                         }
                     },
                     "500": {
-                        "description": "Server Error in fetching memes",
+                        "description": "Server Error in fetching meme post"
+                    },
+                    "400": {
+                        "description": "Invalid Request"
+                    },
+                    "404": {
+                        "description": "The meme post with the particular id couldn't be found"
+                    }
+                }
+            },
+            "patch": {
+                "summary": "Update the url and caption of meme",
+                "description": "Update the url and caption of meme",
+                "responses": {
+                    "200": {
+                        "description": "Posts a meme",
                         "schema": {
-                            "type": "json",
-                            "items": {
+                            "type": "object",
                                 "properties": {
-                                    "message": {
+                                    "url" : {
+                                        "type": "string"
+                                    },
+                                    "caption": {
                                         "type": "string"
                                     }
                                 }
+                        }
+                    },
+                    "409": {
+                        "description": "Posted Duplicate meme"
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    },
+                    "500": {
+                        "description": "Server Error in fetching memes"
+                    }
+                }
+            }
+        },
+        "/like/{id}": {
+            "get": {
+                "summary": "Get the likes for meme post",
+                "description": "Get the likes for meme post",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "object",
+                                "properties": {
+                                "likes": "integer"
                             }
                         }
+                    },
+                    "500": {
+                        "description": "Server Error in fetching likes"
+                    },
+                    "400": {
+                        "description": "Invalid Request"
+                    },
+                    "404": {
+                        "description": "The meme post with the particular id couldn't be found"
+                    }
+                }
+            },
+            "post": {
+                "summary": "Add a like to meme post",
+                "description": "Add a like to meme post",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Id not found"
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    },
+                    "500": {
+                        "description": "Server Error in fetching memes"
+                    }
+                }
+            }
+        },
+        "/unlike/{id}": {
+            "post": {
+                "summary": "Remove like from meme post",
+                "description": "Remove like from meme post",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Id not found"
+                    },
+                    "400": {
+                        "description": "Invalid request"
+                    },
+                    "500": {
+                        "description": "Server Error in fetching memes"
                     }
                 }
             }
         }
+
     },
     "tags": [
         {
